# longform-content-ai

./: .gitignore  README.md  requirements.txt
longform_crew/: .gitignore  README.md  pyproject.toml
longform_crew/db/: chroma.sqlite3
longform_crew/output/: blog_post.md  blog_post_final.md  content_plan.md  content_request_content_20250508_175739.json  content_request_content_20250508_180410.json  content_request_content_20250508_204338.json  content_summary_unknown.json  final_review.md  linkedin_post.md  linkedin_post_final.md  newsletter_content.md  newsletter_content_final.md  research_brief.md
longform_crew/src/longform_crew/: crew.py  main.py
longform_crew/src/longform_crew/config/: agents.yaml  tasks.yaml
longform_crew/src/longform_crew/tools/: custom_tool.py
