[project]
name = "longform_crew"
version = "0.1.0"
description = "longform-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
longform_crew = "longform_crew.main:run"
run_crew = "longform_crew.main:run"
train = "longform_crew.main:train"
replay = "longform_crew.main:replay"
test = "longform_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
